--- a/libreria/templates/base.html
+++ b/libreria/templates/base.html
@@ -23,7 +23,7 @@
           <a class="nav-item nav-link active" href="{% url 'nosotros' %}" aria-current="page">Nosotros</a>
           {% if request.user.is_authenticated %}
           <a class="nav-item nav-link active" style="position: absolute; right: 5px" href="{% url 'logout' %}" aria-current="page">Salir</a>
-          <a class="nav-item nav-link active" href="" style="position: absolute; right: 50px" aria-current="page">Mi Perfil</a>
+          <a class="nav-item nav-link active" href="{% url 'perfil' %}" style="position: absolute; right: 50px" aria-current="page">Mi Perfil</a>
           {% else %}
           <a class="nav-item nav-link active" href="{% url 'login' %}" aria-current="page">Loguearse</a>
           <a class="nav-item nav-link active" href="{% url 'registro' %}" aria-current="page">Registrarse</a>
