Agregamos funcionalidad de perfil, y botones de cancelar en ciertos puntos específicos

--- a/libreria/templates/articulos/index.html
+++ b/libreria/templates/articulos/index.html
@@ -11,10 +11,10 @@
         <a name="" id="" class="btn btn-success" href="{% url 'crear' %}" role="button">Agregar nuevo artículo</a>
     </div>
     <div class="card-body">
-        <h4 class="card-title">Articulos</h4>
+        <h3 class="card-title">Articulos</h3>
 
         <div class="table-responsive">
-            <table class="table table-primary">
+            <table class="table table-default">
                 <thead>
                     <tr>
                         <th scope="col">ID</th>
