Se agrega funcionalidad de cambio de avatar o foto de perfil, junto con la parte del aboutus

--- a/libreria/templates/paginas/nosotros.html
+++ b/libreria/templates/paginas/nosotros.html
@@ -6,7 +6,16 @@
 {% block contenido %} 
 
 
-Seccion de nosotros 
+<div class="p-5 bg-light">
+    <div class="container">
+        <h1 class="display-5">Hablemos un poco del creador</h1>
+        <p class="lead">
+            Soy Nazareno, tengo 25 años y estoy aprendiendo a programar en Python. 
+            Realicé este proyecto para empezar a meterme en el mundo de la programación y empezar a mejorar mis conocimientos.
+            Espero les guste y lo disfruten.
 
+        </p>
+    </div>
+</div>
 
 {% endblock %}
