--- a/libreria/templates/base.html
+++ b/libreria/templates/base.html
@@ -22,6 +22,7 @@
           <a class="nav-item nav-link active" href="{% url 'articulos' %}" aria-current="page">Artículos</a>
           <a class="nav-item nav-link active" href="{% url 'nosotros' %}" aria-current="page">Nosotros</a>
           {% if request.user.is_authenticated %}
+          <img src="{{ avatar }}" width="40px" style="position: absolute; right: 120px">
           <a class="nav-item nav-link active" style="position: absolute; right: 5px" href="{% url 'logout' %}" aria-current="page">Salir</a>
           <a class="nav-item nav-link active" href="{% url 'perfil' %}" style="position: absolute; right: 50px" aria-current="page">Mi Perfil</a>
           {% else %}
