--- a/libreria/templates/paginas/perfil.html
+++ b/libreria/templates/paginas/perfil.html
@@ -21,7 +21,7 @@
         
     </div>     
     <br>   
-    <a name="" id="" class="btn btn-primary" href="" role="button">Cambiar foto de perfil</a>
+    <a name="" id="" class="btn btn-primary" href="{% url 'cambiarAvatar' %}" role="button">Cambiar foto de perfil</a>
     <br>
     <a name="" id="" class="btn btn-primary" href="{% url 'editarPerfil' %}" role="button">Editar Perfil</a>
     <br>
